--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -21,6 +21,7 @@ proptest = { version = "1.1", optional = true }
 thiserror = "1.0"
 tracing = "0.1"
 lazy_static = "1.4"
+serde = { version = "1.0", features = ["derive"] }
 [dev-dependencies]
 proptest = "1.1"
 
