--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -22,6 +22,8 @@ thiserror = "1.0"
 tracing = "0.1"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
+typenum = "1.13"
+generic-array = "0.14.7"
 [dev-dependencies]
 proptest = "1.1"
 
