--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -24,6 +24,7 @@ lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 typenum = "1.13"
 generic-array = "0.14.7"
+anyhow = "1.0"
 [dev-dependencies]
 proptest = "1.1"
 
