--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -21,6 +21,7 @@ proptest = { version = "1.1", optional = true }
 thiserror = "1.0"
 tracing = "0.1"
 lazy_static = "1.4"
+rayon = "1.5.1"
 serde = { version = "1.0", features = ["derive"] }
 typenum = "1.13"
 generic-array = "0.14.7"
