--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -20,6 +20,7 @@ path = "src/lib.rs"
 proptest = { version = "1.1", optional = true }
 thiserror = "1.0"
 tracing = "0.1"
+num_cpus = "1.13.0"
 lazy_static = "1.4"
 rayon = "1.5.1"
 serde = { version = "1.0", features = ["derive"] }
