--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -27,9 +27,11 @@ serde = { version = "1.0", features = ["derive"] }
 typenum = "1.13"
 generic-array = "0.14.7"
 anyhow = "1.0"
-ark-ff = "0.4.2"
-ark-bn254 = "0.4.0"
-ark-poly = "0.4.2"
+# ark-ff = "0.4.2"
+# ark-bn254 = "0.4.0"
+# ark-poly = "0.4.2"
+rand = "0.8.5"
+num256 = "0.5.1"
 [dev-dependencies]
 proptest = "1.1"
 
