--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -31,7 +31,7 @@ ark-ff = "0.4.2"
 ark-bn254 = "0.4.0"
 # ark-poly = "0.4.2"
 rand = "0.8.5"
-num256 = "0.5.1"
+primitive-types = "0.12.1"
 [dev-dependencies]
 proptest = "1.1"
 
