--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -26,9 +26,11 @@ rayon = "1.5.1"
 serde = { version = "1.0", features = ["derive"] }
 typenum = "1.13"
 generic-array = "0.14.7"
+grumpkin = {git = "https://github.com/jules/grumpkin.git"}
 anyhow = "1.0"
-# ark-ff = "0.4.2"
-# ark-bn254 = "0.4.0"
+ark-ff = "0.4.2"
+ark-ec = "0.4.2"
+ark-bn254 = "0.4.0"
 # ark-poly = "0.4.2"
 rand = "0.8.5"
 primitive-types = "0.12.1"
