--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -32,6 +32,7 @@ ark-ff = "0.4.2"
 ark-ec = "0.4.2"
 ark-bn254 = "0.4.0"
 # ark-poly = "0.4.2"
+ark-serialize = "0.4.2"
 rand = "0.8.5"
 primitive-types = "0.12.1"
 [dev-dependencies]
