--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -17,10 +17,12 @@ authors = ["Claudia Richoux <c@laudiacay.cool>"]
 path = "src/lib.rs"
 
 [dependencies]
+# todo alphabetize
 proptest = { version = "1.1", optional = true }
 thiserror = "1.0"
 tracing = "0.1"
 num_cpus = "1.13.0"
+sha3 = "0.10.8"
 lazy_static = "1.4"
 rayon = "1.5.1"
 serde = { version = "1.0", features = ["derive"] }
