--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -36,6 +36,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 tracing = "0.1"
 typenum = "1.13"
+ff = {version = "0.13.0", features = ["alloc"]}
 
 [dev-dependencies]
 proptest = "1.1"
