--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -38,6 +38,7 @@ tracing = "0.1"
 typenum = "1.13"
 ff = {version = "0.13.0", features = ["alloc"]}
 either = "1.8.1"
+num-bigint = "0.4.3"
 
 [dev-dependencies]
 proptest = "1.1"
