--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -22,6 +22,7 @@ ark-bn254 = "0.4.0"
 ark-ec = "0.4.2"
 ark-ff = "0.4.2"
 ark-serialize = "0.4.2"
+byteorder = "1.4.3"
 generic-array = "0.14.7"
 grumpkin = {git = "https://github.com/jules/grumpkin.git"}
 lazy_static = "1.4"
