--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 rust-version = "1.64"
 documentation = "https://docs.rs/barustenberg"
 repository = "https://github.com/laudiacay/barustenberg/tree/main/barustenberg"
-authors = ["Claudia Richoux <c@laudiacay.cool>"]
+authors = ["Claudia Richoux <c@laudiacay.cool>, Waylon Jepsen <waylonjepsen1@gmail.com>"]
 
 [lib]
 path = "src/lib.rs"
@@ -23,7 +23,7 @@ ark-ec = "0.4.2"
 ark-ff = "0.4.2"
 ark-serialize = "0.4.2"
 generic-array = "0.14.7"
-grumpkin = {git = "https://github.com/jules/grumpkin.git"}
+grumpkin = { git = "https://github.com/noir-lang/grumpkin.git"}
 lazy_static = "1.4"
 num_cpus = "1.13.0"
 once_cell = "1.17.2"
