--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -11,7 +11,9 @@ edition = "2021"
 rust-version = "1.64"
 documentation = "https://docs.rs/barustenberg"
 repository = "https://github.com/laudiacay/barustenberg/tree/main/barustenberg"
-authors = ["Claudia Richoux <c@laudiacay.cool>, Waylon Jepsen <waylonjepsen1@gmail.com>"]
+authors = [
+	"Claudia Richoux <c@laudiacay.cool>, Waylon Jepsen <waylonjepsen1@gmail.com>",
+]
 
 [lib]
 path = "src/lib.rs"
@@ -23,8 +25,9 @@ ark-ec = "0.4.2"
 ark-ff = "0.4.2"
 ark-serialize = "0.4.2"
 byteorder = "1.4.3"
+ark-std = "0.4.0"
 generic-array = "0.14.7"
-grumpkin = { git = "https://github.com/noir-lang/grumpkin.git"}
+grumpkin = { git = "https://github.com/noir-lang/grumpkin.git" }
 lazy_static = "1.4"
 num_cpus = "1.13.0"
 once_cell = "1.17.2"
@@ -37,7 +40,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 tracing = "0.1"
 typenum = "1.13"
-ff = {version = "0.13.0", features = ["alloc"]}
+ff = { version = "0.13.0", features = ["alloc"] }
 either = "1.8.1"
 num-bigint = "0.4.3"
 
