--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -23,6 +23,7 @@ anyhow = "1.0"
 ark-bn254 = "0.4.0"
 ark-ec = "0.4.2"
 ark-ff = "0.4.2"
+ark-std = "0.4.0"
 ark-serialize = "0.4.2"
 byteorder = "1.4.3"
 ark-std = "0.4.0"
