--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ members = [
 	"examples",
 	"barustenberg",
 	"barustenberg-benches",
-	"barustenberg-wasm"
+	"barustenberg-wasm",
 ]
+resolver = "2"
 
 # See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
 [profile.release.package.barustenberg-wasm]
@@ -23,3 +24,11 @@ opt-level = "s" # or 'z' to optimize "aggressively" for size
 # See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
 [profile.dev]
 split-debuginfo = "unpacked"
+
+[patch.crates-io]
+ark-bn254 = { git = "https://github.com/lonerapier/curves/" }       # TODO: remove after `Debug` is not being used
+ark-grumpkin = { git = "https://github.com/arkworks-rs/curves/" }
+ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
+ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
+ark-serialize = { git = "https://github.com/arkworks-rs/algebra/" }
+ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
