--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -24,7 +24,7 @@ ark-ff = "0.4.2"
 ark-serialize = "0.4.2"
 byteorder = "1.4.3"
 generic-array = "0.14.7"
-grumpkin = { git = "https://github.com/noir-lang/grumpkin.git"}
+grumpkin = { version = "0.4.0", package = "ark-grumpkin" }
 lazy_static = "1.4"
 num_cpus = "1.13.0"
 once_cell = "1.17.2"
@@ -37,7 +37,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 tracing = "0.1"
 typenum = "1.13"
-ff = {version = "0.13.0", features = ["alloc"]}
+ff = { version = "0.13.0", features = ["alloc"] }
 either = "1.8.1"
 num-bigint = "0.4.3"
 
