--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -41,6 +41,7 @@ typenum = "1.13"
 ff = { version = "0.13.0", features = ["alloc"] }
 either = "1.8.1"
 num-bigint = "0.4.3"
+blake3 = "1.5.0"
 
 [dev-dependencies]
 proptest = "1.1"
