--- a/barustenberg/Cargo.toml
+++ b/barustenberg/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/lib.rs"
 
 [dependencies]
 anyhow = "1.0"
+ark-std = "0.4.0"
 ark-bn254 = "0.4.0"
 ark-ec = "0.4.2"
 ark-ff = "0.4.2"
@@ -40,6 +41,7 @@ typenum = "1.13"
 ff = { version = "0.13.0", features = ["alloc"] }
 either = "1.8.1"
 num-bigint = "0.4.3"
+blake3 = "1.5.0"
 
 [dev-dependencies]
 proptest = "1.1"
